--- a/configure.ac
+++ b/configure.ac
@@ -1,4 +1,4 @@
-# Caja-Actions
+dfghdf# Caja-Actions
 # A Caja extension which offers configurable context menu actions.
 #
 # Copyright (C) 2005 The GNOME Foundation
